<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/product_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedCornerImage" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_edit_product"
            tools:text="@string/product_name_placeholder_txt"/>

        <TextView
            android:id="@+id/product_short_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="12sp"
            android:textColor="@color/h_gray"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintEnd_toStartOf="@id/btn_delete_product"
            tools:text="@string/product_description_placeholder_txt"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/h_primary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toBottomOf="@id/product_short_description"
            tools:text="@string/product_price_placeholder_txt"/>

        <TextView
            android:id="@+id/product_in_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textColor="@color/h_gray"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toBottomOf="@id/product_price"
            tools:text="@string/product_item_stock_placeholder_txt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_product"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit_text"
            android:textColor="@color/h_primary"
            app:icon="@drawable/ic_edit"
            app:iconTint="@color/h_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_delete_product"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_product"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_text"
            android:textColor="@color/h_red"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/h_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_edit_product"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>